--- a/index.html
+++ b/index.html
@@ -13,82 +13,103 @@
     <title>WebStudio</title>
 </head>
 <body>
+    <div class="container">
     <header class="header">
         <nav class="header-nav">
             <a class="header-nav-logo logo" href="index.html">Web<span>Studio</span></a>
             <ul class="header-list">
-                <li class="header-list-item"><a class="header-list-item-link link" href="#">Студия</a></li>
+                <li class="header-list-item"><a class="header-list-item-link link" href="index.html">Студия</a></li>
                 <li class="header-list-item"><a class="header-list-item-link link" href="portfolio.html">Портфолио</a></li>
                 <li class="header-list-item"><a class="header-list-item-link link" href="#">Контакты</a></li>
             </ul>
         </nav>
-        <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="header-link link" href="tel:+380961111111">+38096 111 11 11</a>
+        <div class="header-link-wrap">
+            <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-link link" href="tel:+380961111111">+38096 111 11 11</a>
+        </div>
     </header>
+    </div>
     <main>
-        <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="hero-btn" type="submit">Заказать услугу</button>
-        </section>
-        <section class="advantage">
-            <ul class="advantage-list">
-                <li class="advantage-list-item">
-                    <h3 class="advantage-list-item-title">Внимание к деталям</h3>
-                    <p class="advantage-list-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li class="advantage-list-item">
-                    <h3 class="advantage-list-item-title">Пунктуальность</h3>
-                    <p class="advantage-list-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li class="advantage-list-item">
-                    <h3 class="advantage-list-item-title">Планирование</h3>
-                    <p class="advantage-list-item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li class="advantage-list-item">
-                    <h3 class="advantage-list-item-title">Современные технологии</h3>
-                    <p class="advantage-list-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </section>
-        <section class="whatwedo">
-            <h2 class="whatwedo-title title">Чем мы занимаемся</h2>
-            <ul class="whatwedo-list">
-                <li class="whatwedo-list-item">
-                    <a class="whatwedo-list-item-link" href="#"><img class="whatwedo-list-item-img" src="./images/whatwedo1.jpg" width="370" alt="Что мы делаем"></a>
-                </li>
-                <li class="whatwedo-list-item">
-                    <a class="whatwedo-list-item-link" href="#"><img class="whatwedo-list-item-img" src="./images/whatwedo2.jpg" width="370" alt="Что мы делаем"></a>
-                </li>
-                <li class="whatwedo-list-item">
-                    <a class="whatwedo-list-item-link" href="#"><img class="whatwedo-list-item-img" src="./images/whatwedo3.jpg" width="370" alt="Что мы делаем"></a>
-                </li>
-            </ul>
-        </section>
-        <section class="team">
-            <h2 class="team-title title">Наша команда</h2>
-            <ul class="team-list">
-                <li class="team-list-item">
-                    <img class="team-list-item-img" src="./images/teammember1.jpg" width="260" alt="Участник команды">
-                    <h3 class="team-list-item-title">Игорь Демьяненко</h3>
-                    <p class="team-list-item-text">Product Designer</p>
-                </li>
-                <li class="team-list-item">
-                    <img class="team-list-item-img" src="./images/teammember2.jpg" width="260" alt="Участник команды">
-                    <h3 class="team-list-item-title">Ольга Репина</h3>
-                    <p class="team-list-item-text">Frontend Developer</p>
-                </li>
-                <li class="team-list-item">
-                    <img class="team-list-item-img" src="./images/teammember3.jpg" width="260" alt="Участник команды">
-                    <h3 class="team-list-item-title">Николай Тарасов</h3>
-                    <p class="team-list-item-text">Marketing</p>
-                </li>
-                <li class="team-list-item">
-                    <img class="team-list-item-img" src="./images/teammember4.jpg" width="260" alt="Участник команды">
-                    <h3 class="team-list-item-title">Михаил Ермаков</h3>
-                    <p class="team-list-item-text">UI Designer</p>
-                </li>
-            </ul>
-        </section>
+        <div class="hero-wrap">
+            <div class="container">
+                <section class="hero">
+                    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                    <button class="hero-btn" type="submit">Заказать услугу</button>
+                </section>
+            </div>
+        </div>
+        <div class="container">
+            <section class="advantage">
+                <ul class="advantage-list">
+                    <li class="advantage-list-item">
+                        <h3 class="advantage-list-item-title">Внимание к деталям</h3>
+                        <p class="advantage-list-item-text">Идейные соображения, а также начало повседневной работы по формированию
+                            позиции.</p>
+                    </li>
+                    <li class="advantage-list-item">
+                        <h3 class="advantage-list-item-title">Пунктуальность</h3>
+                        <p class="advantage-list-item-text">Задача организации, в особенности же рамки и место обучения кадров
+                            влечет за собой.</p>
+                    </li>
+                    <li class="advantage-list-item">
+                        <h3 class="advantage-list-item-title">Планирование</h3>
+                        <p class="advantage-list-item-text">Равным образом консультация с широким активом в значительной степени
+                            обуславливает.</p>
+                    </li>
+                    <li class="advantage-list-item">
+                        <h3 class="advantage-list-item-title">Современные технологии</h3>
+                        <p class="advantage-list-item-text">Значимость этих проблем настолько очевидна, что реализация плановых
+                            заданий.</p>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div class="container">
+            <section class="whatwedo">
+                <h2 class="whatwedo-title title">Чем мы занимаемся</h2>
+                <ul class="whatwedo-list">
+                    <li class="whatwedo-list-item">
+                        <a class="whatwedo-list-item-link" href="#"><img class="whatwedo-list-item-img" src="./images/whatwedo1.jpg"
+                                width="370" alt="Что мы делаем"></a>
+                    </li>
+                    <li class="whatwedo-list-item">
+                        <a class="whatwedo-list-item-link" href="#"><img class="whatwedo-list-item-img" src="./images/whatwedo2.jpg"
+                                width="370" alt="Что мы делаем"></a>
+                    </li>
+                    <li class="whatwedo-list-item">
+                        <a class="whatwedo-list-item-link" href="#"><img class="whatwedo-list-item-img" src="./images/whatwedo3.jpg"
+                                width="370" alt="Что мы делаем"></a>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div class="container">
+            <section class="team">
+                <h2 class="team-title title">Наша команда</h2>
+                <ul class="team-list">
+                    <li class="team-list-item">
+                        <img class="team-list-item-img" src="./images/teammember1.jpg" width="260" alt="Участник команды">
+                        <h3 class="team-list-item-title">Игорь Демьяненко</h3>
+                        <p class="team-list-item-text">Product Designer</p>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-list-item-img" src="./images/teammember2.jpg" width="260" alt="Участник команды">
+                        <h3 class="team-list-item-title">Ольга Репина</h3>
+                        <p class="team-list-item-text">Frontend Developer</p>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-list-item-img" src="./images/teammember3.jpg" width="260" alt="Участник команды">
+                        <h3 class="team-list-item-title">Николай Тарасов</h3>
+                        <p class="team-list-item-text">Marketing</p>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-list-item-img" src="./images/teammember4.jpg" width="260" alt="Участник команды">
+                        <h3 class="team-list-item-title">Михаил Ермаков</h3>
+                        <p class="team-list-item-text">UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+        </div>
     </main>
     <footer class="footer">
         <a class="footer-link-logo logo" href="index.html">Web<span>Studio</span></a>
