--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,23 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header class="header">
-        <nav class="header-nav">
-            <a class="header-nav-logo logo" href="index.html">Web<span>Studio</span></a>
-            <ul class="header-list">
-                <li class="header-list-item"><a class="header-list-item-link link" href="index.html">Студия</a></li>
-                <li class="header-list-item"><a class="header-list-item-link link" href="#">Портфолио</a></li>
-                <li class="header-list-item"><a class="header-list-item-link link" href="#">Контакты</a></li>
-            </ul>
-        </nav>
-        <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="header-link link" href="tel:+380961111111">+38096 111 11 11</a>
-    </header>
+    <div class="container">
+        <header class="header">
+            <nav class="header-nav">
+                <a class="header-nav-logo logo" href="index.html">Web<span>Studio</span></a>
+                <ul class="header-list">
+                    <li class="header-list-item"><a class="header-list-item-link link" href="index.html">Студия</a></li>
+                    <li class="header-list-item"><a class="header-list-item-link link" href="portfolio.html">Портфолио</a>
+                    </li>
+                    <li class="header-list-item"><a class="header-list-item-link link" href="#">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="header-link-wrap">
+                <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="header-link link" href="tel:+380961111111">+38096 111 11 11</a>
+            </div>
+        </header>
+    </div>
     <main>
         <section class="portfolio-cards">
             <ul class="portfolio-btn-list">
