adding positions on portfoli.html

--- a/index.html
+++ b/index.html
@@ -13,33 +13,31 @@
     <title>WebStudio</title>
 </head>
 <body>
-    <div class="container">
     <header class="header">
-        <nav class="header-nav">
-            <a class="header-nav-logo logo" href="index.html">Web<span>Studio</span></a>
-            <ul class="header-list">
-                <li class="header-list-item"><a class="header-list-item-link link" href="index.html">Студия</a></li>
-                <li class="header-list-item"><a class="header-list-item-link link" href="portfolio.html">Портфолио</a></li>
-                <li class="header-list-item"><a class="header-list-item-link link" href="#">Контакты</a></li>
-            </ul>
-        </nav>
-        <div class="header-link-wrap">
-            <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="header-link link" href="tel:+380961111111">+38096 111 11 11</a>
-        </div>
-    </header>
-    </div>
-    <main>
-        <div class="hero-wrap">
-            <div class="container">
-                <section class="hero">
-                    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                    <button class="hero-btn" type="submit">Заказать услугу</button>
-                </section>
+        <div class="container">
+            <nav class="header-nav">
+                <a class="header-nav-logo logo" href="index.html">Web<span>Studio</span></a>
+                <ul class="header-list">
+                    <li class="header-list-item"><a class="header-list-item-link link" href="index.html">Студия</a></li>
+                    <li class="header-list-item"><a class="header-list-item-link link" href="portfolio.html">Портфолио</a></li>
+                    <li class="header-list-item"><a class="header-list-item-link link" href="#">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="header-link-wrap">
+                <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="header-link link" href="tel:+380961111111">+38096 111 11 11</a>
             </div>
         </div>
-        <div class="container">
-            <section class="advantage">
+    </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button class="hero-btn" type="submit">Заказать услугу</button>
+            </div>
+        </section>
+        <section class="advantage">
+            <div class="container">
                 <ul class="advantage-list">
                     <li class="advantage-list-item">
                         <h3 class="advantage-list-item-title">Внимание к деталям</h3>
@@ -62,10 +60,10 @@
                             заданий.</p>
                     </li>
                 </ul>
-            </section>
-        </div>
-        <div class="container">
-            <section class="whatwedo">
+            </div>
+        </section>
+        <section class="whatwedo">
+            <div class="container">
                 <h2 class="whatwedo-title title">Чем мы занимаемся</h2>
                 <ul class="whatwedo-list">
                     <li class="whatwedo-list-item">
@@ -81,10 +79,10 @@
                                 width="370" alt="Что мы делаем"></a>
                     </li>
                 </ul>
-            </section>
-        </div>
-        <div class="container">
-            <section class="team">
+            </div>
+        </section>
+        <section class="team">
+            <div class="container">
                 <h2 class="team-title title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="team-list-item">
@@ -108,16 +106,20 @@
                         <p class="team-list-item-text">UI Designer</p>
                     </li>
                 </ul>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
-        <a class="footer-link-logo logo" href="index.html">Web<span>Studio</span></a>
-        <address>
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
-        <a class="footer-link-address link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="footer-link-address link" href="tel:+380961111111">+38096 111 11 11</a>
+        <div class="container">
+            <a class="footer-link-logo logo" href="index.html">Web<span>Studio</span></a>
+            <address>
+                г. Киев, пр-т Леси Украинки, 26
+            </address>
+            <div class="footer-link-wrap">
+                <a class="footer-link-address link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="footer-link-address link" href="tel:+380961111111">+38096 111 11 11</a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
