--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div class="container">
-        <header class="header">
+    <header class="header">
+        <div class="container">
             <nav class="header-nav">
                 <a class="header-nav-logo logo" href="index.html">Web<span>Studio</span></a>
                 <ul class="header-list">
@@ -28,73 +28,79 @@
                 <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <a class="header-link link" href="tel:+380961111111">+38096 111 11 11</a>
             </div>
-        </header>
-    </div>
+        </div>
+    </header>
     <main>
         <section class="portfolio-cards">
-            <ul class="portfolio-btn-list">
-                <li class="portfolio-list-item"><button class="portfolio-btn" type="button">Все</button></li>
-                <li class="portfolio-list-item"><button class="portfolio-btn" type="button">Веб-сайты</button></li>
-                <li class="portfolio-list-item"><button class="portfolio-btn" type="button">Приложения</button></li>
-                <li class="portfolio-list-item"><button class="portfolio-btn" type="button">Дизайн</button></li>
-                <li class="portfolio-list-item"><button class="portfolio-btn" type="button">Маркетинг</button></li>
-            </ul>
-            <ul class="portfolio-cards-list">
-                <li class="cards-list-item">
-                    <img src="./images/portfolio1.jpg" alt="Технокряк" width="370">
-                    <h3 class="cards-list-item-title">Технокряк</h3>
-                    <a class="cards-list-item-link link" href="#">Веб-сайт</a>
-                </li>
-                <li class="cards-list-item">
-                    <img src="./images/portfolio2.jpg" alt="Технокряк" width="370">
-                    <h3 class="cards-list-item-title">Постер New Orlean vs Golden Star</h3>
-                    <a class="cards-list-item-link link" href="#">Дизайн</a>
-                </li>
-                <li class="cards-list-item">
-                    <img src="./images/portfolio3.jpg" alt="Технокряк" width="370">
-                    <h3 class="cards-list-item-title">Ресторан Seafood</h3>
-                    <a class="cards-list-item-link link" href="#">Приложение</a>
-                </li>
-                <li class="cards-list-item">
-                    <img src="./images/portfolio4.jpg" alt="Технокряк" width="370">
-                    <h3 class="cards-list-item-title">Проект Prime</h3>
-                    <a class="cards-list-item-link link" href="#">Маркетинг</a>
-                </li>
-                <li class="cards-list-item">
-                    <img src="./images/portfolio5.jpg" alt="Технокряк" width="370">
-                    <h3 class="cards-list-item-title">Проект Boxes</h3>
-                    <a class="cards-list-item-link link" href="#">Приложение</a>
-                </li>
-                <li class="cards-list-item">
-                    <img src="./images/portfolio6.jpg" alt="Технокряк" width="370">
-                    <h3 class="cards-list-item-title">Inspiration has no Borders</h3>
-                    <a class="cards-list-item-link link" href="#">Веб-сайт</a>
-                </li>
-                <li class="cards-list-item">
-                    <img src="./images/portfolio7.jpg" alt="Технокряк" width="370">
-                    <h3 class="cards-list-item-title">Издание Limited Edition</h3>
-                    <a class="cards-list-item-link link" href="#">Дизайн</a>
-                </li>
-                <li class="cards-list-item">
-                    <img src="./images/portfolio8.jpg" alt="Технокряк" width="370">
-                    <h3 class="cards-list-item-title">Проект LAB</h3>
-                    <a class="cards-list-item-link link" href="#">Маркетинг</a>
-                </li>
-                <li class="cards-list-item">
-                    <img src="./images/portfolio9.jpg" alt="Технокряк" width="370">
-                    <h3 class="cards-list-item-title">Growing Business</h3>
-                    <a class="cards-list-item-link link" href="#">Приложение</a>
-                </li>
-            </ul>
+            <div class="container">
+                <ul class="portfolio-btn-list">
+                    <li class="portfolio-list-item"><button class="portfolio-btn" type="button">Все</button></li>
+                    <li class="portfolio-list-item"><button class="portfolio-btn" type="button">Веб-сайты</button></li>
+                    <li class="portfolio-list-item"><button class="portfolio-btn" type="button">Приложения</button></li>
+                    <li class="portfolio-list-item"><button class="portfolio-btn" type="button">Дизайн</button></li>
+                    <li class="portfolio-list-item"><button class="portfolio-btn" type="button">Маркетинг</button></li>
+                </ul>
+                <ul class="portfolio-cards-list">
+                    <li class="cards-list-item">
+                        <img class="cards-list-item-img" src="./images/portfolio1.jpg" alt="Технокряк" width="370">
+                        <h3 class="cards-list-item-title">Технокряк</h3>
+                        <a class="cards-list-item-link link" href="#">Веб-сайт</a>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="cards-list-item-img" src="./images/portfolio2.jpg" alt="Технокряк" width="370">
+                        <h3 class="cards-list-item-title">Постер New Orlean vs Golden Star</h3>
+                        <a class="cards-list-item-link link" href="#">Дизайн</a>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="cards-list-item-img" src="./images/portfolio3.jpg" alt="Технокряк" width="370">
+                        <h3 class="cards-list-item-title">Ресторан Seafood</h3>
+                        <a class="cards-list-item-link link" href="#">Приложение</a>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="cards-list-item-img" src="./images/portfolio4.jpg" alt="Технокряк" width="370">
+                        <h3 class="cards-list-item-title">Проект Prime</h3>
+                        <a class="cards-list-item-link link" href="#">Маркетинг</a>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="cards-list-item-img" src="./images/portfolio5.jpg" alt="Технокряк" width="370">
+                        <h3 class="cards-list-item-title">Проект Boxes</h3>
+                        <a class="cards-list-item-link link" href="#">Приложение</a>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="cards-list-item-img" src="./images/portfolio6.jpg" alt="Технокряк" width="370">
+                        <h3 class="cards-list-item-title">Inspiration has no Borders</h3>
+                        <a class="cards-list-item-link link" href="#">Веб-сайт</a>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="cards-list-item-img" src="./images/portfolio7.jpg" alt="Технокряк" width="370">
+                        <h3 class="cards-list-item-title">Издание Limited Edition</h3>
+                        <a class="cards-list-item-link link" href="#">Дизайн</a>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="cards-list-item-img" src="./images/portfolio8.jpg" alt="Технокряк" width="370">
+                        <h3 class="cards-list-item-title">Проект LAB</h3>
+                        <a class="cards-list-item-link link" href="#">Маркетинг</a>
+                    </li>
+                    <li class="cards-list-item">
+                        <img class="cards-list-item-img" src="./images/portfolio9.jpg" alt="Технокряк" width="370">
+                        <h3 class="cards-list-item-title">Growing Business</h3>
+                        <a class="cards-list-item-link link" href="#">Приложение</a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="footer-link-logo logo" href="index.html">Web<span>Studio</span></a>
-        <address>
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
-        <a class="footer-link-address link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="footer-link-address link" href="tel:+380961111111">+38096 111 11 11</a>
+        <div class="container">
+            <a class="footer-link-logo logo" href="index.html">Web<span>Studio</span></a>
+            <address>
+                г. Киев, пр-т Леси Украинки, 26
+            </address>
+            <div class="footer-link-wrap">
+                <a class="footer-link-address link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="footer-link-address link" href="tel:+380961111111">+38096 111 11 11</a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
